# Robotics_Project_Team_13

./: ARDUINO_SETUP.md  PI5_SETUP.md  arduino_robot_controller.ino  log.txt
devel/: .catkin
devel/lib/pkgconfig/: my_robot_gazebo.pc  my_robot_moveit_config.pc  robot_arm_total.pc  validation_pkg.pc
pyscripts/: README_kinematics.md  TERMINAL_INPUT_GUIDE.md  calibrated_kinematics.py  end_effector_position.py  forwardKinematics.py  kinematics.py  main.py  pyproject.toml
src/my_robot_gazebo/: CMakeLists.txt
src/my_robot_gazebo/launch/: display.launch  spawn_gazebo.launch
src/my_robot_gazebo/scripts/: check_topics.py  continous_movement.py  cubic_trajectory_planner.py  fowardKinematics.py  inverseKinematics.py  log.txt  measure_robot.py  milestone_2.py  pi_servo_controller.py  reset_position.py
src/my_robot_gazebo/scripts/arduino_test/: arduino_test.ino
src/my_robot_gazebo/urdf/: log.txt
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: R5_DOF_Robot_Assembly.srdf  fake_controllers.yaml  gazebo_R5_DOF_Robot_Assembly.urdf  joint_limits.yaml
src/my_robot_moveit_config/launch/: demo.launch  gazebo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml
src/robot_arm_total/: CMakeLists.txt  log.txt  package.xml
src/robot_arm_total/config/: joint_names_robot arm total.yaml
src/robot_arm_total/launch/: display.launch  gazebo.launch  log.txt
src/robot_arm_total/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  base_link.STL
src/validation_pkg/: CMakeLists.txt  package.xml
(+8 files in other folders)
